fix: Remove position: fixed from .search-active.main
Fix an issue where searching may also break the page layout. position: fixed seems no longer necessary as there is no layout differences with or without it (tested on iPadOS 18.1b5). May break on older iOS/iPadOS versions.

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -247,12 +247,12 @@ nav.toc {
     display: inline-block;
     visibility: visible;
     position: sticky;
-    top: 1rem;
-    left: calc((100% - #{$nav-width + $toc-width + $content-width}) / 2 + #{$nav-width + $content-width} + 1rem);
+    top: $sp-4;
+    left: calc((100% - #{$nav-width + $toc-width + $content-width}) / 2 + #{$nav-width + $content-width} + $sp-4);
     vertical-align: top;
     margin-top: #{$header-height + $sp-8};
     width: $toc-width;
-    max-height: calc(100vh - 1rem);
+    max-height: calc(100vh - #{$sp-4} * 2);
     overflow-y: auto;
   }
 
